# Care_Robotics_ROS

./: .gitignore  Dockerfile  PROJECT_STRUCTURE.md  docker-compose.yml
.devcontainer/: devcontainer.json
care_amcl/: package.xml
care_app/care_behavior/: CMakeLists.txt  package.xml
care_app/ml_ros_websocket_bridge/: CMakeLists.txt  ROS_TOPIC_FORMATS.md  package.xml  pyproject.toml  requirements.txt
care_app/ml_ros_websocket_bridge/config/: bridge_config.yaml
care_app/ml_ros_websocket_bridge/launch/: bridge.launch.py
care_app/ml_ros_websocket_bridge/src/robot_ros_bridge/: bridge_node.py  main.py  message_converter.py  nav2_controller.py  system_state.py  task_state.py  websocket_handler.py
care_app/mock_nav2_server/: package.xml  pyproject.toml
care_app/mock_nav2_server/config/: default.yaml
care_app/mock_nav2_server/launch/: mock_and_bridge.launch.py
care_app/mock_nav2_server/src/mock_nav2_server/: consumption_sim.py  mock_node.py  robot_sim.py
care_bridge/care_micro_ros/: package.xml
care_bringup/: CMakeLists.txt  package.xml
care_docking/: CMakeLists.txt
care_hw_bridge/: CMakeLists.txt  package.xml
care_interfaces/: CMakeLists.txt  package.xml
care_localization/care_amcl/: CMakeLists.txt
care_micro_ros/: CMakeLists.txt
care_navigation/care_docking/: package.xml
care_navigation/care_nav2_bringup/: CMakeLists.txt  package.xml
care_perception/care_sensor_fusion/: package.xml
care_perception/care_tof_process/: CMakeLists.txt  package.xml
care_perception/care_vision/: package.xml
care_sensor_fusion/: CMakeLists.txt
care_slam/: CMakeLists.txt  package.xml
care_vision/: CMakeLists.txt
