[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml_ros_websocket_bridge"
version = "0.1.0"
description = "Bridge between CareRobotics task allocation and ROS2 Nav2 navigation"
license = { text = "Apache-2.0" }
maintainer = [{ name = "user", email = "user@example.com" }]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ml_ros_websocket_bridge = "ml_ros_websocket_bridge.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/ml_ros_websocket_bridge"]
"share/ml_ros_websocket_bridge" = ["package.xml"]
"share/ml_ros_websocket_bridge/config" = ["config/bridge_config.yaml"]
"share/ml_ros_websocket_bridge/launch" = ["launch/bridge.launch.py"]
